[package]
name = "xdc"
version = "0.3.0"
edition = "2024"
license = "0BSD"
repository = "https://github.com/ArcaneNibble/xdc"
description = "eXperimental Dynamic Casting - support library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdc_macros = { path = "../xdc_macros", version = "0.3", default-features = false }
# Re-exported here to ensure downstream users don't need to depend on it
linkme = "0.3"

[features]
default = ["std"]
alloc = ["xdc_macros/alloc"]
std = ["alloc", "xdc_macros/std"]
