[package]
name = "xdc"
version = "0.4.0"
edition = "2024"
license = "0BSD"
repository = "https://github.com/ArcaneNibble/xdc"
description = "eXperimental Dynamic Casting - support library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Re-exported here to ensure downstream users don't need to depend on it
mident = { path = "../../mident", version = "0.0.1" }
linkme = "0.3"

[features]
default = ["std"]
alloc = []
std = ["alloc"]
