[package]
name = "xdc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[lib]
proc-macro = true

[features]
default = ["std"]
alloc = []
std = ["alloc"]
