[package]
name = "xdc_macros"
version = "0.2.0"
edition = "2024"
license = "0BSD"
repository = "https://github.com/ArcaneNibble/xdc"
description = "eXperimental Dynamic Casting - macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
xdc = { path = "../xdc" }

[lib]
proc-macro = true

[features]
default = ["std"]
alloc = []
std = ["alloc"]
