[package]
name = "xdc_test"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "0.3"
# xdc = { path = "../xdc"}
# xdc = { path = "../xdc", default-features = false, features = [ ] }
xdc = { path = "../xdc", default-features = false, features = [ "alloc" ] }
